# android-Math-Underdog

./: .gitignore  README.md  build.gradle.kts  qwenandroid记录.docx  settings.gradle.kts
nn/: CMakeLists.txt  build.gradle.kts
nn/src/main/: AndroidManifest.xml
nn/src/main/python/: android_py.py  app.py  bge.py  check_onnx.py  citation_match.json  citation_match_res.json  embeding.py  lilte_window_web.py  lite_windows.py  llite_windows.py  llm_test.py  main.py  mcp_call.py  nputils.py  ocr.py  openvino_int8.py  outputposition.py  popwindow.py  qwen2run.py  qwen_npu.py  qwenrun.py  rag_local.py  screenshot.py  test.py  test1.py  test_civitai.py  test_flash_attn.py  test_tensorrt.py  testrun.py
nn/src/main/python/assets/: config.json  generation_config.json
nn/src/main/python/bert/: 1,text_classification.py  2,named_entity_ecognition.py  3.question_answering.py  4,text_matching_semantic_similarity.py  5,machine_translation.py  6,text_summarization.py  7,zero-shot_or_few-shot_learning.py  8,semantic_search.py  9,intelligent_writing_assistant.py
nn/src/main/python/components/: global_key.py  ocr.py  popwindow.py  screenshot.py
nn/src/main/python/demo/: local_ip.py  qwen_tensorrt.py  qwenrun.py
nn/src/main/python/gptq/: onnx_int8.py  openvino_int8.py
nn/src/main/python/handlers/: request_handlers.py
nn/src/main/python/infer/: __init__.py  base_transformer.py  interface_api.py  interface_api_back.py  llm_utils.py
nn/src/main/python/mcp/: README.md  mcp_server.py  mcp_system.py  mcp_weather_server.py
nn/src/main/python/np_logits/: logits_process.py
(+134 files in other folders)
